Feature: Static twitter without models

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<h1>Twitter</h1>
 
-{{outlet}}
+<TwitterBox 
+	@handleSubmit={{this.onSubmit}}
+/>
+
+<Feed
+	@tweets={{this.tweets}}
+/>
