Feature: listing current tweets, WIP: empty state for Feed component

--- a/app/templates/components/tweet.hbs
+++ b/app/templates/components/tweet.hbs
@@ -1,5 +1,5 @@
 <div class="tweet-wrapper">
-	{{@data.created_at}}
-	{{@data.user_name}}
+	{{@data.createdAt}}
+	{{@data.userName}}
 	{{@data.description}}
 </div>
