--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,21 +1,109 @@
+html{
+	background-color: rgb(14,18,22);
+	font-family: 'Helvetica Neue';
+}
+
 .input-wrapper {
-	border: 1px solid blue;
-	padding: 10px;
-	margin: 10px;
+	color: #61dafb;
+	background-color: rgb(21,39,56);
+	justify-content: flex-start;
+	align-content: baseline;
+	border: 0.1px solid rgba(116,134,148,0.3);
+}
+
+input {
+	border: 0.2px solid rgb(116,134,148);
+	border-radius: 4px;
+	background-color: rgb(14,18,22);
+	padding: 2vmin;
+	margin: 3vmin;
+	color: white;
+}
+
+input::placeholder {
+	color: rgb(47,141,238);
+	font-weight: bold;
+}
+
+button {
+	color: white;
+	font-weight: bold;
+	background-color: rgb(47,141,238);
+	border: none;
+	border-radius: 20px;
+	margin: 15px;
+	padding: 12px;
 }
 
 .feed-wrapper {
-	border: 1px solid red;
-	padding: 10px;
-	margin: 10px;
-}
-
-.tweet-wrapper {
-	border: 1px solid orange;
-	padding: 10px;
-	margin: 10px;
+	border: none;
+	/*background-color: rgb(17,24,32);*/
 }
 
 .error-text {
 	color: red;
+}
+
+.tweet-wrapper {
+	border: 0.1px solid rgba(116,134,148,0.3);
+	color: white;
+	justify-content: space-between;
+	align-content: baseline;
+	padding: 2vmin;
+}
+
+.tweet-content {
+	flex: 2;
+	justify-content: space-around;
+	align-content: flex-start;
+}
+
+.tweet-info {
+	text-align: start;
+	margin: 2vmin;
+}
+
+.avatar {
+	width: 20vmin;
+	height: 20vmin;
+	border-radius: 20vmin;
+	border: 1px solid black;
+	margin: 10px;
+}
+
+.small-avatar {
+	width: 10vmin;
+	height: 10vmin;
+	border-radius: 10vmin;
+	border: 0.5px solid black;
+	margin: 5px; 
+}
+
+.user-name {
+	font-weight: bold;
+	margin: 0vmin 2vmin;
+}
+
+.timestamp {
+	color: rgb(116,134,148);
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+}
+
+.dummy-tweet {
+	color: white;
+	margin: 5vmin;
+}
+
+p {
+	padding: 0;
+	margin: 0;
 }
