Using rsvp hash to get tweets and users

--- a/app/templates/components/tweet.hbs
+++ b/app/templates/components/tweet.hbs
@@ -8,7 +8,7 @@
 	<div class="column tweet-content">
 		<div class="row">
 			<p class="user-name">
-				{{if @data.userName @data.userName 'Yvone'}}
+				{{if @data.user.username @data.user.username 'Yvone'}}
 			</p>
 			<span class="timestamp">{{@data.createdAt}}</span>
 		</div>
