Feature: (playing with tracked properties in model) generate custom avatars with Identicon

--- a/app/templates/components/tweet.hbs
+++ b/app/templates/components/tweet.hbs
@@ -1,8 +1,9 @@
 <div class="tweet-wrapper row">
 	<div>
 		<img
-			class="small-avatar"
-			src="https://static.onecms.io/wp-content/uploads/sites/37/2017/05/15215238/102997431.jpg"
+			{{!-- class="small-avatar" 
+			src="https://static.onecms.io/wp-content/uploads/sites/37/2017/05/15215238/102997431.jpg"--}}
+			src={{@data.user.avatar}}
 		/>
 	</div>
 	<div class="column tweet-content">
